@@ -6,6 +6,9 @@
 
 RELEASE 2.X.X - 
 
+  From anatoly techtonik:
+    + Ability to run scripts/scons.py directly from source checkout.
+
   From Alexey Klimkin:
     - Fix nested LIBPATH expansion by flattening sequences in subst_path.
 
